--- a/docs/styles/default.module.css
+++ b/docs/styles/default.module.css
@@ -51,7 +51,6 @@
     margin: 0rem auto;
     gap: 2rem;
     width: 80%;
-    height: 100vh;
 }
 .containerContentStart{
     display: grid;
@@ -82,6 +81,46 @@
     width: 60%;
     margin: 3rem auto;
     height: auto;
-
 }
 
+@media (max-width:600px){
+    .main{
+        font-size: 2.5rem;
+        font-family: bold;
+        width: 100%;
+        line-height: 40px;
+    }
+
+    .topic{
+        color: #7828C8;
+        font-size: 2rem;
+        font-family: bold;
+        margin: 0 auto;
+    }
+
+    .contentText{
+        font-size:1.5rem;
+        width: 100%;
+        line-height: 30px;
+        text-align: center;
+    }
+
+    .containerContentStartTitle{
+        display: grid;
+        align-items: center;
+        align-content: center;
+        justify-content: center;
+        margin: rem auto;
+        width: 100%;
+    }
+    
+    .containerContentCenterCard{
+        display: grid;
+        align-items: center;
+        align-content: center;
+        gap: 1rem;
+        width: 90%;
+        margin: 3rem auto;
+        height: auto;
+    }
+}
