--- a/docs/styles/globals.css
+++ b/docs/styles/globals.css
@@ -23,7 +23,7 @@ html {
 }
 
 .footerBody {
-  background-color: #7828C8;
+  background-color: #001731;
   color: #ffffff;
   padding: 20px 0;
   margin-top: 5rem;
